--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,26 @@
-#root {
+body {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #FCFCD2;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.card-container {
+  display: flex;
+  justify-content: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
+.poke-card {
+  margin-top: 20px;
   padding: 2em;
+  background-color: #8DE0FE;
+  max-width: 100px;
+  border-radius: 15px;
 }
 
-.read-the-docs {
-  color: #888;
+.poke-abilities button {
+  background-color: #f25f4c;
+  color: #fffffe
 }
